[tool.poetry]
name = "signalbot-example"
version = "0.1.0"
description = ""
authors = ["René Filip"]

[tool.poetry.dependencies]
python = "^3.9"
signalbot = "0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.1.0"
pre-commit = "^2.17.0"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"