[tool.poetry]
authors = ["René Filip"]
description = "Example bot that uses the signalbot package"
name = "signalbot-example"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
signalbot = "0.6.0a1647186748"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
pytest = "^5.2"

[[tool.poetry.source]]
name = "testpypi"
secondary = true
url = "https://test.pypi.org/simple/"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
